CMAKE_MINIMUM_REQUIRED(VERSION 3.13)

PROJECT(tela)

FIND_PACKAGE(LLVM REQUIRED CONFIG)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

INCLUDE_DIRECTORIES(${LLVM_INCLUDE_DIRS})
SEPARATE_ARGUMENTS(LLVM_DEFINITIONS_LIST NATIVE_COMMAND ${LLVM_DEFINITIONS})
ADD_DEFINITIONS(${LLVM_DEFINITIONS_LIST})

ADD_EXECUTABLE(tela "")

TARGET_INCLUDE_DIRECTORIES(tela PRIVATE src)
ADD_SUBDIRECTORY(src)

LLVM_MAP_COMPONENTS_TO_LIBNAMES(llvm_libs support core irreader)

TARGET_LINK_LIBRARIES(tela ${llvm_libs})

INCLUDE(CTest)

IF(BUILD_TESTING)

  FIND_PACKAGE(Catch2 REQUIRED)
  ADD_EXECUTABLE(tltests "")
  TARGET_LINK_LIBRARIES(tltests Catch2::Catch2)

  INCLUDE(Catch)
  CATCH_DISCOVER_TESTS(tltests)

  TARGET_INCLUDE_DIRECTORIES(tltests PRIVATE src)

  ADD_SUBDIRECTORY(tests)

ENDIF()
